--- a/emap.html
+++ b/emap.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
     <meta charset="utf-8">
-		<title>BCA Disorientation Guide</title>
+		<title>what do i call this help</title>
     <link rel="stylesheet" href="estyle.css">
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
